test/negative/CastExpression1.java
public class CastExpression1 {
    public CastExpression1() {
        int x = 1;
        int y = ((CastExpression1))x;
    }
}
